[tool.poetry]
name = "substrate-stress"
version = "0.1.0"
description = ""
authors = ["Nathan Whitaker <nathan.whitaker01@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6,<4"
locust = "^2.6.0"
substrate-interface = { git = "https://github.com/nathanwhit/py-substrate-interface" }
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
